feat: Add initial Todo application structure, main GUI, and theme management.